# piwik-python-sdk

./: .gitignore  CHANGELOG.md  README.md  piwik_pro_tag_api.json  piwik_pro_tag_api_grouped.json  pyproject.toml  tags.yaml
examples/: connect_with_client_credentials.py
examples/apps/: get_app.py  list_apps.py
piwik/: __init__.py  client.py  exceptions.py
piwik/base/: __init__.py  base_client.py  config.py  http.py  service.py  token.py
piwik/schemas/: annotations.py  apps.py  base.py  custom_dimensions.py  dimensions.py  goals.py  meta.py  mixins.py  page.py  product_custom_dimensions.py  raw.py  responses.py  sites.py  tags.py  triggers.py  types.py  utils.py
piwik/schemas/tags/: __init__.py  base.py
piwik/schemas/tags/schemas/: abandoned_tags.py  adroll_tags.py  bing_ads_tags.py  clicktale_deprecated_tags.py  cookie_information_cmp_integration_tags.py  crazy_egg_tags.py  custom_asynchronous_tags.py  custom_content_tags.py  custom_popup_tags.py  ecommerce_tags.py  floodlight_tags.py  google_tags.py  heatmaps_tags.py  hotjar_tags.py  hub_spot_tags.py  linked_in_tags.py  marketo_tags.py  mautic_tags.py  meta_pixel_tags.py  piwik_pro_tags.py  qualaroo_tags.py  sale_smanago_tags.py  salesforce_pardot_tags.py  video_html5_tags.py  video_you_tube_tags.py
piwik/schemas/tags/schemas/deprecated/: ab_tasty_deprecated_tags.py  custom_synchronous_deprecated_tags.py  double_click_conversion_deprecated_tags.py  optimizely_deprecated_tags.py  visual_website_optimizer_deprecated_tags.py
piwik/services/: __init__.py  apps.py  sites.py
piwik/services/administration/: __init__.py  apps.py  sites.py
piwik/services/analytics/: __init__.py  custom_dimensions.py  events.py  goals.py  product_custom_dimensions.py  queries.py  rtes.py  sessions.py  system_annotations.py  user_annotations.py
piwik/services/tag_manager/: __init__.py  tags.py
piwik/utils/: validators.py
pywik/: __init__.py  client.py
pywik/base/: base_client.py  config.py  token.py
pywik/schemas/: __init__.py  apps.py  base.py  decorators.py
pywik/services/: __init__.py  apps.py
scrape/: JSON_API_1.py  __init__.py
tests/: conftest.py  test.env  test_client.py  test_config.py  test_token.py
tests/data/: __init__.py  apps.py  custom_dimensions.py  exceptions.py  goals.py  product_custom_dimensions.py  sites.py
tests/schemas/: test_apps.py  test_base.py  test_custom_dimensions.py  test_goals.py  test_product_custom_dimensions.py  test_sites.py
tests/services/: test_services_apps.py  test_services_custom_dimensions.py  test_services_product_custom_dimensions.py  test_services_sites.py
tests/utils/: __init__.py  helper.py
