[tool.poetry]
name = "pywik"
version = "0.1.0"
description = ""
authors = ["Pit Nahrstedt <pit_nahrstedt@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"